# LogReader

./: .clang-format  .gitignore  CMakeLists.txt  README.md  log_item_delegate.cpp  log_item_delegate.h  log_name_dialog.cpp  log_name_dialog.h  log_name_dialog.ui  log_page.cpp  log_page.h  log_page.ui  main.cpp  qss_loader.cpp  qss_loader.h  window.cpp  window.h  window.ui
static/: static.qrc
static/qss/: window.css
